# CMake

./: README.md
basic_01/: CMakeLists.txt  main.cpp  readme.md
basic_01/mylib/: calc.cpp
